# VisionAlert

./: .gitignore  CMakeLists.txt
inc/: CameraManager.h
inc/Qt/: MainWindow.h
inc/onencv/: CameraManager.h  ObjectDetector.h
inc/opencv/: CameraManager.h  DetectionManager.h  MotionDetector.h  ObjectDetector.h
src/: CameraManager.cpp  ObjectDetector.cpp  main.cpp
src/Qt/: MainWindow.cpp
src/opencv/: CameraManager.cpp  DetectionManager.cpp  MotionDetector.cpp  ObjectDetector.cpp
ui/: MainWindow.ui
